--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,53 +1,53 @@
 [versions]
 accompanist = "0.32.0"
-androidGradlePlugin = "8.2.2"
-androidx-activity-compose = "1.9.0-alpha03"
-androidx-appcompat = "1.6.1"
-androidx-compose-bom = "2024.04.01"
-androidx-compose-ui-test = "1.7.0-alpha08"
+androidGradlePlugin = "8.4.2"
+androidx-activity-compose = "1.9.0"
+androidx-appcompat = "1.7.0"
+androidx-compose-bom = "2024.06.00"
+androidx-compose-ui-test = "1.7.0-beta03"
 androidx-constraintlayout = "2.1.4"
 androidx-constraintlayout-compose = "1.0.1"
 androidx-coordinator-layout = "1.2.0"
-androidx-corektx = "1.9.0"
+androidx-corektx = "1.13.1"
 androidx-emoji2-views = "1.4.0"
-androidx-fragment-ktx = "1.6.2"
-androidx-glance-appwidget = "1.0.0"
-androidx-lifecycle-compose = "2.8.0-rc01"
-androidx-lifecycle-runtime-compose = "2.8.0-rc01"
+androidx-fragment-ktx = "1.8.0"
+androidx-glance-appwidget = "1.1.0"
+androidx-lifecycle-compose = "2.8.2"
+androidx-lifecycle-runtime-compose = "2.8.2"
 androidx-navigation = "2.7.7"
-androidx-paging = "3.2.1"
-androidx-test = "1.5.0"
-androidx-test-espresso = "3.5.1"
-androidx-window = "1.3.0-beta02"
+androidx-paging = "3.3.0"
+androidx-test = "1.6.0"
+androidx-test-espresso = "3.6.0"
+androidx-window = "1.3.0"
 androidxHiltNavigationCompose = "1.2.0"
-coil = "2.5.0"
+coil = "2.6.0"
 # @keep
 compileSdk = "34"
 compose-compiler = "1.5.4"
 coreSplashscreen = "1.0.1"
-coroutines = "1.7.3"
-google-maps = "18.2.0"
+coroutines = "1.8.1"
+google-maps = "19.0.0"
 gradle-versions = "0.51.0"
-hilt = "2.50"
+hilt = "2.51.1"
 horologist = "0.5.24"
 junit = "4.13.2"
 # @pin Update in conjuction with Compose Compiler
-kotlin = "1.9.20"
+kotlin = "1.9.22"
 ksp = "1.8.0-1.0.9"
 maps-compose = "4.3.2"
-material = "1.4.0-beta01"
-material3-adaptive = "1.0.0-alpha12"
+material = "1.12.0"
+material3-adaptive = "1.0.0-beta03"
 material3-adaptive-navigation-suite = "1.0.0-alpha07"
-media3 = "1.2.1"
+media3 = "1.3.1"
 # @keep
 minSdk = "21"
-playServicesWearable = "18.1.0"
+playServicesWearable = "18.2.0"
 recyclerview = "1.3.2"
 # @keep
 targetSdk = "34"
 version-catalog-update = "0.8.3"
-wearComposeFoundation = "1.3.0"
-wearComposeMaterial = "1.3.0"
+wearComposeFoundation = "1.4.0-beta03"
+wearComposeMaterial = "1.4.0-beta0301"
 composeUiTooling = "1.3.1"
 
 [libraries]
